--- a/public/project-admin-views/assets/less/custom.less
+++ b/public/project-admin-views/assets/less/custom.less
@@ -392,7 +392,7 @@ color: #fff;
     padding: 14px 15px 0px 15px;
     background: #D1DADE;
     .tools .filterby{
-    	   margin-top: -6px;
+    	   margin-top: -7px;
     }
 }
 .grid-table{	
@@ -767,4 +767,29 @@ select, select option
 {
 	padding-right: 0 !important;
 	padding-left: 0 !important;
+}
+.m-t-3
+{
+	margin-top: 3px;
+}
+.filter-label
+{
+	float: left;
+	margin-right: 10px;
+	margin-top: 2px;
+}
+.filter-dropdown.submission-filter
+{
+	form, .cf-loader
+	{
+		float: right;
+	}
+	form
+	{
+		label
+		{
+			float: left;
+			margin-top: 14px;
+		}
+	}
 }
